Issue 198: implementation effects too much
git-svn-id: https://build.archivesportaleurope.net/svn/apex/trunk@404 9fd842fd-667d-44da-918d-ff91420b3ae1

--- a/Dashboard/src/main/webapp/css/cssnew.css
+++ b/Dashboard/src/main/webapp/css/cssnew.css
@@ -1,5 +1,6 @@
 * {
 	margin: 0;
+	padding: 0;
 	outline: 0;
 }
 
@@ -9,9 +10,9 @@ html,body {
 
 body {
     color: #333333;
-	font: 0.75em Arial,sans-serif;
-	text-align : center;
-	background : #fff;
+font: 0.75em Arial,sans-serif;
+text-align : center;
+background : #fff;
 }
 .left {
 	float:left;
@@ -35,7 +36,7 @@ body {
 }
 select#selectLanguage  {
     font-size: 10px;
-    border-color: #BFBFBF #DEDEDE #DEDEDE #BFBFBF;
+       border-color: #BFBFBF #DEDEDE #DEDEDE #BFBFBF;
     border-image: none;
     border-style: solid;
     border-width: 1px;
@@ -64,10 +65,13 @@ select#selectLanguage  {
 
 #titledashboard {
 	float: left;
+	
+	/*width : 50%;*/
 	width: 50%;
 	height: auto;
 	font-weight: bold;
 	font-size: 2em;
+
 	color: #00A0DF;
 	margin-top: 45px;
 }
@@ -88,7 +92,9 @@ select#selectLanguage  {
 }
 #idioma {
 	position: relative;
+	/*float : left;*/
 	float: inherit;
+	/*width : 50%;*/
 	width: 10%;
 	height: auto;
 	top: 10px;
@@ -292,21 +298,19 @@ text-align:  center;
 }
 
 #footernavbar {
-background: none repeat scroll 0 0 #CCCCCC;
-    border-top: 3px solid #333333;
-    bottom: 0px;
-    clear: both;
-    color: #FFFFFF;
-    font-size: 0.8em;
-    font-weight: normal;
-    height: 25px;
-    left: 0px;
-    margin-left: 5%;
-    margin-right: 5%;
-    margin-top: 500px;
-    text-align: center;
-    width: 100%;
-    overflow:hidden;
+	background: none repeat scroll 0 0 #CCCCCC;
+	border-top: 3px solid #333333;
+	bottom: 0px;
+	left: 0px;
+	clear: both;
+	color: #FFFFFF;
+	font-size: 0.8em;
+	font-weight: normal;
+	height: 25px;
+	text-align: center;
+	width: 90%;
+	margin-left: 5%;
+	margin-right: 5%;
 }
 
 #footerCatInner {
@@ -631,18 +635,22 @@ h2 {
 	float: right;
 	height: 450px;
 	width: 40%;
+	/*width:35%;*/
 	font-family: Arial, sans-serif;
 	font-size: 10pt;
 	color: #000;
 	font-weight: normal;
 	margin-right: 5px;
+	/*margin-right: 33px;*/
 	margin-left: -8px;
 }
 
 .scrollbar {
 	overflow-x: hidden;
+	/*height: 480px;*/
 	height: 450px;
 	overflow-y: auto;
+	/*width: 420px;*/
 	clip: auto;
 	margin-left: -65px;
 	padding-right: 10px;
@@ -896,8 +904,6 @@ h2 {
 	font-size:8pt;
 	padding-left:2px;
 	padding-right:2px;
-	width: auto;
-	overflow: hidden;
 }
 #content_div_table td, table.defaultlayout td{
 	 border: 1px solid #DBDBDB;
@@ -918,11 +924,11 @@ h2 {
 }
 #content_div_table td.title{
 	text-align: left;
-	width:auto;
+	width:200px;
 }
 #content_div_table td.actions{
 	text-align: left;
-	width:auto;
+	width:300px;
 	padding-top:2px;
 	padding-bottom:2px;
 }
